# pyFlapjack

./: .readthedocs.yaml  LICENSE  README.md  index.html  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  pip-publish.yml  python-publish.yml
docs/: conf.py  index.rst  introduction.rst  requirements.txt
flapjack/: __init__.py  flapjack.py  simulator.py  util.py
notebooks/: Account Creation.ipynb  Figure 3 - phase space.ipynb  Figure 4 - CRISPRi Inverters.ipynb  Figure 5 - Context effects on gene expression levels.ipynb  Figure 5 - Context effects.ipynb  Figure 6 - Cell-free.ipynb  Figure 6 - Context effects on gene expression dynamics.ipynb  Figure 7 - CRISPRi Inverters.ipynb  Figure 7 - FluoPi.ipynb  Figure 8 - Cell-free.ipynb  Figure 9 - Reporter Behaviour.ipynb  Repressilator characterization.ipynb  Simulator.ipynb  Simulator_param_scan.ipynb  Testing.ipynb
scripts/: simulate.py  simulate_heatmap.py  simulate_inducer.py  simulate_repressilator.py
source/: index.html.md
src/flapjack/: __init__.py  flapjack.py  util.py
