[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflapjack"
version = "1.1.0"
description = "Python package that interfaces the Flapjack API"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["flapjack", "data", "experimental", "analysis", "synthetic biology"]
authors = [
  { name="Timothy Rudge", email="tim.rudge@ncl.ac.uk" },
  { name="Gonzalo Vidal", email="g.a.vidal-pena2@ncl.ac.uk" }
]
maintainers = [
  {name = "Gonzalo Vidal", email = "g.a.vidal-pena2@ncl.ac.uk"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'numpy>=1.26',
  'scipy>=1.11',
  'pandas>=2.0',
  'requests>=2.25.1',
  'tqdm>=4.62',
  'plotly>=5.3',
  'nest_asyncio>=1.5',
  'requests_jwt>=0.5.3',
  'websockets>=12',
  'matplotlib>=3.10',
  'kaleido>=0.2.1'
]

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
"Homepage" = "https://github.com/RudgeLab/pyFlapjack"
"Bug Tracker" = "https://github.com/RudgeLab/pyFlapjack/issues"
